--- a/MyLogisticRegression.ipynb
+++ b/MyLogisticRegression.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "class MyLogisticRegression:\n",
-    "    def __init__(self, max_iter=100):\n",
+    "    def __init__(self, max_iter=10):\n",
     "        self.max_iter = max_iter\n",
     "    def fit(self, X_train, y_train):\n",
     "        X_train = np.array(X_train)\n",
@@ -83,7 +83,7 @@
     "            p1 = np.exp(X_train.dot(beta))/(1+np.exp(X_train.dot(beta)))\n",
     "            p0 = 1-p1\n",
     "            W = np.diag(p0*p1)\n",
-    "            beta = np.linalg.inv(np.transpose(X_train).dot(W).dot(X_train)).dot(np.transpose(X_train)).dot(y_train-p1)\n",
+    "            beta = beta + np.linalg.inv(np.transpose(X_train).dot(W).dot(X_train)).dot(np.transpose(X_train)).dot(y_train-p1)\n",
     "            self.beta_new = beta\n",
     "    def predict(self, X_test):\n",
     "        X_test = np.array(X_test)\n",
@@ -111,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_test)"
@@ -135,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-1 Loss of My LogisticRegression: 0.04678362573099415\n"
+      "0-1 Loss of My LogisticRegression: 0.052631578947368474\n"
      ]
     }
    ],
