--- a/MyLogisticRegression.ipynb
+++ b/MyLogisticRegression.ipynb
@@ -76,7 +76,8 @@
     "    def __init__(self, max_iter=10):\n",
     "        self.max_iter = max_iter\n",
     "    def fit(self, X_train, y_train):\n",
-    "        X_train = np.array(X_train)\n",
+    "        ones = np.transpose(np.array([[1]*len(X_train)]))\n",
+    "        X_train = np.concatenate((ones, np.array(X_train)), axis=1)\n",
     "        y_train = np.array(y_train)\n",
     "        beta = np.array([0]*X_train.shape[1])\n",
     "        for i in range(self.max_iter):\n",
@@ -86,7 +87,8 @@
     "            beta = beta + np.linalg.inv(np.transpose(X_train).dot(W).dot(X_train)).dot(np.transpose(X_train)).dot(y_train-p1)\n",
     "            self.beta_new = beta\n",
     "    def predict(self, X_test):\n",
-    "        X_test = np.array(X_test)\n",
+    "        ones = np.transpose(np.array([[1]*len(X_test)]))\n",
+    "        X_test = np.concatenate((ones, np.array(X_test)), axis=1)\n",
     "        return (np.exp(X_test.dot(self.beta_new))/(1+np.exp(X_test.dot(self.beta_new))) > 0.5).astype('int')"
    ]
   },
@@ -137,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-1 Loss of My LogisticRegression: 0.052631578947368474\n"
+      "0-1 Loss of My LogisticRegression: 0.05847953216374269\n"
      ]
     }
    ],
