--- a/MyRegressionSpline.ipynb
+++ b/MyRegressionSpline.ipynb
@@ -533,7 +533,7 @@
     }
    ],
    "source": [
-    "print('MSE of sklearn LinearRegression:', mse(y_test, y_pred))"
+    "print('MSE of sklearn PolynomialRegression:', mse(y_test, y_pred))"
    ]
   }
  ],
