--- a/MyNaturalCubicSpline.ipynb
+++ b/MyNaturalCubicSpline.ipynb
@@ -6,7 +6,7 @@
     "id": "UhKe8ySbpnQ-"
    },
    "source": [
-    "# Regression Spline"
+    "# Natural Cubic Spline"
    ]
   },
   {
@@ -179,7 +179,7 @@
     "id": "rY6KwM9Gpwke"
    },
    "source": [
-    "## My Regression Spline"
+    "## My Natural Cubic Spline"
    ]
   },
   {
@@ -201,25 +201,24 @@
    },
    "outputs": [],
    "source": [
-    "class MyRegressionSpline:\n",
-    "    def fit(self, X_train, y_train, m, k):\n",
+    "class MyNaturalCubicSpline:\n",
+    "    def fit(self, X_train, y_train, k):\n",
     "        X_train = np.array(X_train)\n",
     "        y_train = np.array(y_train)\n",
-    "        self.m = m\n",
     "        self.k = np.array(k)\n",
-    "        X_train_new = np.power(X_train, 0)\n",
-    "        for i in range(1, m+1):\n",
-    "            X_train_new = np.column_stack((X_train_new, np.power(X_train, i)))\n",
-    "        for i in range(len(k)):\n",
-    "            X_train_new = np.column_stack((X_train_new, np.where(np.power(X_train-k[i], m) < 0, 0, np.power(X_train-k[i], m))))\n",
+    "        X_train_new = np.column_stack((np.ones(len(X_train)), X_train))\n",
+    "        d_Km1 = (np.where(np.power(X_train-k[-2], 3) < 0, 0, np.power(X_train-k[-2], 3))-np.where(np.power(X_train-k[-1], 3) < 0, 0, np.power(X_train-k[-1], 3)))/(k[-2]-k[-1])\n",
+    "        for i in range(len(k)-2):\n",
+    "            d = (np.where(np.power(X_train-k[i], 3) < 0, 0, np.power(X_train-k[i], 3))-np.where(np.power(X_train-k[-1], 3) < 0, 0, np.power(X_train-k[-1], 3)))/(k[i]-k[-1])\n",
+    "            X_train_new = np.column_stack((X_train_new, d-d_Km1))\n",
     "        self.beta = np.linalg.inv(np.transpose(X_train_new).dot(X_train_new)).dot(np.transpose(X_train_new)).dot(y_train)\n",
     "    def predict(self, X_test):\n",
     "        X_test = np.array(X_test)\n",
-    "        X_test_new = np.power(X_test, 0)\n",
-    "        for i in range(1, self.m+1):\n",
-    "            X_test_new = np.column_stack((X_test_new, np.power(X_test, i)))\n",
-    "        for i in range(len(self.k)):\n",
-    "            X_test_new = np.column_stack((X_test_new, np.where(np.power(X_test-self.k[i], self.m) < 0, 0, np.power(X_test-self.k[i], self.m))))\n",
+    "        X_test_new = np.column_stack((np.ones(len(X_test)), X_test))\n",
+    "        d_Km1 = (np.where(np.power(X_test-self.k[-2], 3) < 0, 0, np.power(X_test-self.k[-2], 3))-np.where(np.power(X_test-self.k[-1], 3) < 0, 0, np.power(X_test-self.k[-1], 3)))/(self.k[-2]-self.k[-1])\n",
+    "        for i in range(len(self.k)-2):\n",
+    "            d = (np.where(np.power(X_test-self.k[i], 3) < 0, 0, np.power(X_test-self.k[i], 3))-np.where(np.power(X_test-self.k[-1], 3) < 0, 0, np.power(X_test-self.k[-1], 3)))/(self.k[i]-self.k[-1])\n",
+    "            X_test_new = np.column_stack((X_test_new, d-d_Km1))\n",
     "        return X_test_new.dot(self.beta)"
    ]
   },
@@ -242,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "model = MyRegressionSpline()"
+    "model = MyNaturalCubicSpline()"
    ]
   },
   {
@@ -264,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, 3, [1.57, 4.71])"
+    "model.fit(X_train, y_train, [0, 2, 4, 6])"
    ]
   },
   {
@@ -275,8 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.22137752,  0.30667669,  0.56319194, -0.27152306,  0.42296915,\n",
-       "       -0.32643441])"
+       "array([ 0.05596738,  0.91746561,  0.68398466, -1.33350375])"
       ]
      },
      "execution_count": 10,
@@ -358,12 +356,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE of My RegressionSpline: 0.08787998647675975\n"
+      "MSE of My NaturalCubicSpline: 0.08913677331949463\n"
      ]
     }
    ],
    "source": [
-    "print('MSE of My RegressionSpline:', mse(y_test, y_pred))"
+    "print('MSE of My NaturalCubicSpline:', mse(y_test, y_pred))"
    ]
   },
   {
@@ -542,7 +540,8 @@
      "user_tz": -540
     },
     "id": "r5-14AGez3jf",
-    "outputId": "09b80742-817d-4768-a234-ed03967076e7"
+    "outputId": "09b80742-817d-4768-a234-ed03967076e7",
+    "scrolled": true
    },
    "outputs": [
     {
