--- a/MyLinearRegression.ipynb
+++ b/MyLinearRegression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rosenblatt's Perceptron"
+    "# Linear Regression"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.datasets import load_breast_cancer"
+    "from sklearn.datasets import load_boston"
    ]
   },
   {
@@ -30,9 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = load_breast_cancer().data\n",
-    "y = load_breast_cancer().target\n",
-    "y = np.where(y==0, -1, y)"
+    "X = load_boston().data\n",
+    "y = load_boston().target"
    ]
   },
   {
@@ -64,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My Perceptron"
+    "## My Linear Regression"
    ]
   },
   {
@@ -73,35 +72,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyPerceptron:\n",
-    "    def __init__(self, max_iter=100):\n",
-    "        self.max_iter = max_iter\n",
-    "    \n",
-    "    def fit(self, X_train, y_train, lr):\n",
-    "        ones = np.transpose(np.array([1]*len(X_train)))\n",
+    "class MyLinearRegerssion:\n",
+    "    def fit(self, X_train, y_train):\n",
+    "        ones = np.ones(len(X_train))\n",
     "        X_train = np.array(X_train)\n",
+    "        X_train = np.column_stack((np.ones(len(X_train)), X_train))\n",
     "        y_train = np.array(y_train)\n",
-    "        beta = np.array([0]*X_train.shape[1])\n",
-    "        beta0 = 0\n",
-    "        status = True ; tmp = 1\n",
-    "        while status:\n",
-    "            status = False\n",
-    "            yhat = np.array([-1 if i < 0 else 1 for i in (X_train.dot(beta) + ones.dot(beta0))])\n",
-    "            for i in range(len(X_train)):\n",
-    "                if y_train[i] != yhat[i]:\n",
-    "                    beta = beta + lr*y_train[i]*X_train[i]\n",
-    "                    beta0 = beta0 + lr*y_train[i]\n",
-    "                    tmp += 1\n",
-    "                    status = True\n",
-    "            if tmp > len(X_train)*self.max_iter:\n",
-    "                break\n",
-    "        self.beta_new = beta\n",
-    "        self.beta0_new = beta0\n",
+    "        self.beta = np.linalg.inv(np.transpose(X_train).dot(X_train)).dot(np.transpose(X_train)).dot(y_train)\n",
     "        \n",
     "    def predict(self, X_test):\n",
-    "        ones = np.transpose(np.array([1]*len(X_test)))\n",
+    "        ones = np.ones(len(X_test))\n",
     "        X_test = np.array(X_test)\n",
-    "        return np.array([-1 if i < 0 else 1 for i in (X_test.dot(self.beta_new) + self.beta0_new)])"
+    "        X_test = np.column_stack((np.ones(len(X_test)), X_test))\n",
+    "        return X_test.dot(self.beta)"
    ]
   },
   {
@@ -110,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MyPerceptron()"
+    "model = MyLinearRegerssion()"
    ]
   },
   {
@@ -119,15 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, 1)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_test)"
@@ -139,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import zero_one_loss"
+    "from sklearn.metrics import mean_squared_error as mse"
    ]
   },
   {
@@ -151,12 +132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-1 Loss of My Perceptron: 0.06432748538011701\n"
+      "MSE of My LinearRegression: 27.195965766885163\n"
      ]
     }
    ],
    "source": [
-    "print('0-1 Loss of My Perceptron:', zero_one_loss(y_pred, y_test))"
+    "print('MSE of My LinearRegression:', mse(y_test, y_pred))"
    ]
   },
   {
@@ -179,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -188,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logit = LogisticRegression(max_iter=10000)"
+    "model = LinearRegression()"
    ]
   },
   {
@@ -199,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=10000)"
+       "LinearRegression()"
       ]
      },
      "execution_count": 13,
@@ -208,7 +189,7 @@
     }
    ],
    "source": [
-    "logit.fit(X_train, y_train)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -217,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = logit.predict(X_test)"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -229,12 +210,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-1 Loss of sklearn LogisticRegression: 0.040935672514619936\n"
+      "MSE of sklearn LinearRegression: 27.195965766883408\n"
      ]
     }
    ],
    "source": [
-    "print('0-1 Loss of sklearn LogisticRegression:', zero_one_loss(y_pred, y_test))"
+    "print('MSE of sklearn LinearRegression:', mse(y_test, y_pred))"
    ]
   }
  ],
